updates ecology paper

--- a/cv.tex
+++ b/cv.tex
@@ -76,7 +76,7 @@
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
 
-      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (In press). Environmental responses, not species interactions, determine synchrony of dominant species in semiarid grasslands. \emph{Ecology}.
+      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (2017). Environmental responses, not species interactions, determine synchrony of dominant species in semiarid grasslands. \emph{Ecology} 98(4):971-981.
       
       Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. (2017). Water and nitrogen uptake are better associated with resource availability than root biomass. \emph{Ecosphere} 8(3):e01738.
 	
@@ -104,19 +104,21 @@
 		
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. Invited for revision at \emph{Ecology Letters}.
+	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}. \vspace{-6mm}\\
 	
-	\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
+	Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In review at \emph{Ecology Letters}. \\%
+    \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}}
+	
+	%\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
-    Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony of ecosystem functioning across space increases ecosystem stability through time. In preparation for \emph{Ecology Letters}. \\%
-    \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}} \vspace{-6mm}\\%
+     %\vspace{-6mm}\\%
     
 	
     %__________________________________________________________________________________________________________________
     % Funding
     \section{\textmd{\textsf{\color{MidnightBlue}{Competitive\\Funding \\ \footnotesize{External: \$297,000} \\ \footnotesize{Internal: \$17,500}}}}}
     %\section{\mysidestyle Competitive\\Funding\\\textsl{\footnotesize External: \$297,000}\\\textsl{\footnotesize Internal: \$17,500}}
-    \textbf{Pending}: ``Synthesizing time series of plant and animal populations to understand the limits to ecological forecasts'', USGS Powell Center Working Group Proposal.\vspace{2mm}\\
+    %\textbf{Pending}: ``Synthesizing time series of plant and animal populations to understand the limits to ecological forecasts'', USGS Powell Center Working Group Proposal.\vspace{2mm}\\
     ``Diversity-Stability Relationships and Coexistence: New Theory and Empirical Tests," NSF Postdoctoral Research Fellowship in Biology and Mathematics, \$207,000 (2014-2017).\vspace{2mm}\\%
     ``Effective Science Communication and Public Relations at NREL through EcoPress," Natural Resource Ecology Lab, \$6,000 (Co-I) (2013) \vspace{2mm}\\%
     ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014). \vspace{2mm}\\%
