--- a/cv.tex
+++ b/cv.tex
@@ -183,6 +183,7 @@
     \textsl{Journal of Vegetation Science};
     \textsl{Koedoe: African Protected Area Conservation and Science};
     \textsl{Oecologia};
+    \textsl{Oikos};
     \textsl{Proceedings of the National Academy of Sciences};
     \textsl{Proceedings of the Royal Society B};
      \textsl{PLoS One};
