updates MEE info

--- a/cv.tex
+++ b/cv.tex
@@ -75,12 +75,12 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
+      
+      \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2017). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution} 8(5):541-551.
 
       \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (2017). Environmental responses, not species interactions, determine synchrony of dominant species in semiarid grasslands. \emph{Ecology} 98(4):971-981.
       
       Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. (2017). Water and nitrogen uptake are better associated with resource availability than root biomass. \emph{Ecosphere} 8(3):e01738.
-	
-	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2016). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}, Early View (online).
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten, C.L. Aldridge, C. Homer, A.R. Kleinhesselink, and P.B. Adler. (2016). Forecasting climate change impacts on plant populations over large spatial extents. \emph{Ecosphere} 7(10):e01525.
 	
