--- a/cv.tex
+++ b/cv.tex
@@ -75,6 +75,7 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
+      \textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. (In press). The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. \emph{Ecology Letters}. 
       
       \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2017). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution} 8(5):541-551.
 
@@ -86,9 +87,9 @@
 	
 	\textbf{Tredennick, A.T.}, P.B. Adler, J.B. Grace, W.S. Harpole, E.T. Borer, E.W. Seabloom, and 36 co-authors. (2016). Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science} 35(6272):457a-457c. \vspace{-6mm}\\%
 	
-	\textbf{Tredennick, A.T.}, M. Karemb\'{e}, F. Demb\'{e}l\'{e}, J. Dohn, and N.P Hanan. (2015). No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495. \vspace{-6mm}\\%
+				\newpage{}
 	
-			\newpage{}
+	\textbf{Tredennick, A.T.}, M. Karemb\'{e}, F. Demb\'{e}l\'{e}, J. Dohn, and N.P Hanan. (2015). No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495. \vspace{-6mm}\\%
 	
 	Hanan, N. P., \textbf{A.T. Tredennick}, L. Prihodko, G. Bucini, and J. Dohn. (2015). Analysis of stable states in global savannas -- a response to Staver and Hansen. 	\textsl{Global Ecology and Biogeography} 24(8):988-989. \vspace{-6mm}\\%
    
@@ -104,9 +105,7 @@
 		
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}. \vspace{-6mm}\\
-	
-	Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In review at \emph{Ecology Letters}. \\%
+	Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In revision at \emph{Ecology Letters}. \\%
     \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}}
 	
 	%\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
