adds some USU teaching stuff

--- a/cv.tex
+++ b/cv.tex
@@ -136,7 +136,15 @@
     % Teaching Experience
      \section{\textmd{\textsf{\color{MidnightBlue}{Teaching\\Experience}}}}
    % \section{\mysidestyle Teaching\\Experience}
-    \textbf{Ecological Society of America Annual Meetings Workshop} \hfill \textbf{2013-2016}\\
+   
+   \textbf{Utah State University} \hfill \textbf{2015--2017}\\
+	Weekly \texttt{R} help sessions for graduate students
+   
+   \textbf{Utah State University} \hfill \textbf{2016}\\
+   	\textsl{Community Ecology (graduate)} \\
+	Led unit (lecture and lab) on the diversity-stability relationship
+   
+    \textbf{Ecological Society of America Annual Meetings Workshop} \hfill \textbf{2013-2017}\\
     		\textsl{Data Visualization in R}\\
 		Co-organizer and co-instructor (with Naupaka Zimmermann)\\
 		Materials: http://github.com/atredennickesa\_data\_viz\_2016
@@ -147,10 +155,12 @@
                \textsl{Plant Ecology (undergraduate)}\\
                Guest Lecture on Tree-Grass Coexistence
                
+                     \newpage{}
+               
     \textbf{Colorado State University} \hfill \textbf{2012}\\ 
                \textsl{NREL Skills for Undergraduate Participation in Ecological Research}\\
                Data Analysis/Visualization Workshop Leader
-               		      \newpage{}
+               		
     \textbf{Colorado State University} \hfill \textbf{2011}\\ 
                \textsl{RS 351, Ecosystem Processes in a Changing World (undergraduate)}\\
                Co-Instructor 
@@ -220,11 +230,12 @@
     
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents,'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
     
+      \newpage{} 
+    
 
     Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' invited seminar, Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
     
-    Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna,'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%
-            \newpage{}    
+    Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna,'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%   
     
     Tredennick, A.T., and Hanan N.P. (2013) ``The Theoretical and Integrative Effects of Tree Harvest and Fire on Grassland-Savanna-Forest Transitions,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 1\textsuperscript{st} Place Oral Presentation}. \vspace{-6mm}\\%
     
