--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,6 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{times}
 
-
 \definecolor{mycol}{gray}{0.2}
 \color{mycol}
 %\usepackage{avant}
@@ -188,6 +187,7 @@
     \textsl{Elementa};
     \textsl{Environmental Management};
     \textsl{Forest Ecology and Management};
+    \textsl{Journal of Applied Ecology};
     \textsl{Journal of Ecology};
     \textsl{Journal of Vegetation Science};
     \textsl{Koedoe: African Protected Area Conservation and Science};
@@ -212,9 +212,9 @@
    \textbf{University Service and Public Outreach}\\
    	Director of Social Media, \textsl{NREL EcoPress}: http://nrelscience.org (2012-2013)\\
 	Student Review Committee, Ecology Faculty Search, CSU (2011)\\
-	Organizing Committee, Global Savanna Workshop, CSU (2009)\\
 	Advertising and Outreach Committee, Front Range Student Ecology Symposium (2010)\\
-	Graduate Student Representative, Natural Resource Ecology Lab (2010-2011)
+	Graduate Student Representative, Natural Resource Ecology Lab (2010-2011)\\
+	Organizing Committee, NASA Global Savanna Workshop, CSU (2009)
   
 %__________________________________________________________________________________________________________________
     % Presentations
@@ -231,9 +231,8 @@
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents,'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
     
       \newpage{} 
-    
-
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' invited seminar, Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
+      
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' \textbf{Invited Seminar}, Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
     
     Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna,'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%   
     
