adds Dietze PNAS in review

--- a/cv.tex
+++ b/cv.tex
@@ -105,7 +105,9 @@
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
 	Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In revision at \emph{Ecology Letters}. \\%
-    \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}}
+    \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}}  \vspace{-6mm}\\%
+    
+    Dietze, M.C., A. Fox, L. Beck-Johnson J.L. Betancourt, M.B. Hooten, C.S Jarnevich, T. Keitt, M.A. Kenney, C.M. Laney, L.G. Larsen, H.W. Loescher, C.K. Lunch, B. Pijanowski, J.T. Randerson, E.K. Read, \textbf{A.T. Tredennick}, R. Vargas, K.C. Weathers, and E.P. White. Iterative near-term ecological forecasting: Needs, opportunities, and challenges. In review at \emph{Proceedings of the National Academy of Sciences}.
 	
 	%\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
@@ -148,13 +150,11 @@
 		Co-organizer and co-instructor (with Naupaka Zimmermann)\\
 		Materials: http://github.com/atredennickesa\_data\_viz\_2016
 		
-
+                     \newpage{}
     
     \textbf{Colorado State University} \hfill \textbf{2013}\\
                \textsl{Plant Ecology (undergraduate)}\\
                Guest Lecture on Tree-Grass Coexistence
-               
-                     \newpage{}
                
     \textbf{Colorado State University} \hfill \textbf{2012}\\ 
                \textsl{NREL Skills for Undergraduate Participation in Ecological Research}\\
@@ -228,9 +228,10 @@
     
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2014) ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species.'' 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
     
+          \newpage{} 
+    
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents,'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
     
-      \newpage{} 
       
     Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' \textbf{Invited Seminar}, Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
     
