--- a/cv.tex
+++ b/cv.tex
@@ -107,7 +107,7 @@
 	Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In revision at \emph{Ecology Letters}. \\%
     \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}}  \vspace{-6mm}\\%
     
-    Dietze, M.C., A. Fox, L. Beck-Johnson J.L. Betancourt, M.B. Hooten, C.S Jarnevich, T. Keitt, M.A. Kenney, C.M. Laney, L.G. Larsen, H.W. Loescher, C.K. Lunch, B. Pijanowski, J.T. Randerson, E.K. Read, \textbf{A.T. Tredennick}, R. Vargas, K.C. Weathers, and E.P. White. Iterative near-term ecological forecasting: Needs, opportunities, and challenges. In review at \emph{Proceedings of the National Academy of Sciences}.
+    Dietze, M.C., A. Fox, L. Beck-Johnson, J.L. Betancourt, M.B. Hooten, C.S Jarnevich, T. Keitt, M.A. Kenney, C.M. Laney, L.G. Larsen, H.W. Loescher, C.K. Lunch, B. Pijanowski, J.T. Randerson, E.K. Read, \textbf{A.T. Tredennick}, R. Vargas, K.C. Weathers, and E.P. White. Iterative near-term ecological forecasting: Needs, opportunities, and challenges. In review at \emph{Proceedings of the National Academy of Sciences}.
 	
 	%\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
