--- a/cv.tex
+++ b/cv.tex
@@ -104,7 +104,7 @@
 		
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-	Wilcox$^*$, K.R., \textbf{A.T. Tredennick}$^*$, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In revision at \emph{Ecology Letters}. \\%
+	Wilcox$^*$, K.R., \textbf{A.T. Tredennick}$^*$, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony among local communities stabilizes ecosystem function of metacommunities. In review at \emph{Ecology Letters}. \\%
     \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}}  \vspace{-6mm}\\%
     
     Dietze, M.C., A. Fox, L. Beck-Johnson, J.L. Betancourt, M.B. Hooten, C.S Jarnevich, T. Keitt, M.A. Kenney, C.M. Laney, L.G. Larsen, H.W. Loescher, C.K. Lunch, B. Pijanowski, J.T. Randerson, E.K. Read, \textbf{A.T. Tredennick}, R. Vargas, K.C. Weathers, and E.P. White. Iterative near-term ecological forecasting: Needs, opportunities, and challenges. In review at \emph{Proceedings of the National Academy of Sciences}.
