udpates title for non-NSF postodc

--- a/cv.tex
+++ b/cv.tex
@@ -22,7 +22,7 @@
     % Contact Information
     \section{\textmd{\textsf{\color{MidnightBlue}{Contact\\Information}}}}
 
-    NSF Postdoctoral Fellow      							 \hfill Phone: (970) 443-1599            \vspace{0mm}\\\vspace{0mm}%
+    Postdoctoral Research Associate      							 \hfill Phone: (970) 443-1599            \vspace{0mm}\\\vspace{0mm}%
     Department of Wildland Resources and    		          \hfill E-mail: atredenn@gmail.com    \vspace{0mm}\\\vspace{0mm}%
     The Ecology Center, Utah State University      	          \hfill Web: \href{http://atredennick.github.io}{atredennick.github.io}  \vspace{0mm}\\\vspace{-4.5mm}%
 
@@ -48,8 +48,10 @@
      %__________________________________________________________________________________________________________________
     % Professional Experience
     \section{\textmd{\textsf{\color{MidnightBlue}{Professional\\Appointments}}}}
-    \textbf{Utah State University, Dept. of Wildland Resources}, Logan, UT \hfill \textbf{2014 -- Pres.} \\
-		\textsl{Postdoctoral Fellow} \vspace{.5mm}\\
+    \textbf{Utah State University, Dept. of Wildland Resources}, Logan, UT  \hfill \textbf{2017 -- Pres.} \\ %\& \\ \textbf{Cornell University, Dept. of EEB}, Ithaca, NY 
+		\textsl{Postdoctoral Research Associate} \vspace{.5mm}\\ 
+    \textbf{Utah State University, Dept. of Wildland Resources}, Logan, UT \hfill \textbf{2014 -- 2017} \\
+		\textsl{NSF Postdoctoral Fellow} \vspace{.5mm}\\
     \textbf{Colorado State University, Natural Resource Ecology Lab}, Ft. Collins, CO \hfill \textbf{2011 -- 2014}\\
 		\textsl{Graduate Research Fellow}\vspace{.5mm}\\ 
     \textbf{Colorado State University, Natural Resource Ecology Lab}, Ft. Collins, CO \hfill \textbf{2009 -- 2011}\\
@@ -232,8 +234,8 @@
     
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents,'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
     
-      
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' \textbf{Invited Seminar}, Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
+\section{\footnotesize{\emph{\textsf{Invited Seminar}} }}
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
     
     Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna,'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%   
     
