--- a/cv.tex
+++ b/cv.tex
@@ -222,38 +222,38 @@
     % Presentations
      \section{\textmd{\textsf{\color{MidnightBlue}{Presentations}}}}
    % \section{\mysidestyle Presentations}
-        Tredennick, A.T. C. de Mazancourt, M. Loreau, and P.B. Adler. (2016) ``Disentangling the drivers of species synchrony in natural plant communities: Environmental forcing, demographic stochasticity, and interspecific interactions''. 2016 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+        Tredennick, A.T. C. de Mazancourt, M. Loreau, and P.B. Adler. (2016) ``Disentangling the drivers of species synchrony in natural plant communities: Environmental forcing, demographic stochasticity, and interspecific interactions.'' 2016 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
         
-    Tredennick, A.T. and P.B. Adler. (2015) ``Do we need detailed demographic data to forecast population responses to climate change? 2015 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+    Tredennick, A.T. and P.B. Adler. (2015) ``Do we need detailed demographic data to forecast population responses to climate change?'' 2015 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
     
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2014) ``Africa's Fuelwood Footprint and the Biome-Level Impacts of Tree Harvest,'' Station d'Ecologie Exp\'{e}rimentale du CNRS, Moulis, France. \vspace{-6mm}\\% 
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2014) ``Africa's Fuelwood Footprint and the Biome-Level Impacts of Tree Harves.'' Station d'Ecologie Exp\'{e}rimentale du CNRS, Moulis, France. \vspace{-6mm}\\% 
     
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2014) ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species.'' 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
     
           \newpage{} 
     
-    Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents,'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
+    Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2013) ``Pixel-based modeling of population dynamics at large spatial extents.'' Climate Change in Sagebrush Steppe Working Group, Park City, UT. \vspace{-6mm}\\%
     
 \section{\footnotesize{\emph{\textsf{Invited Seminar}} }}
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa,'' Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2013) ``Sustainability and Biome-Level Impacts of Fuelwood Harvesting in sub-Saharan Africa.'' Geospatial Science Center of Excellence, South Dakota State University. \vspace{-6mm}\\%
     
-    Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna,'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%   
+    Tredennick, A.T., and Hanan N.P. (2013) ``Tree harvest, fire, and drought can drive state transitions in savanna.'' 2013 Annual Meetings of the Ecological Society of America. \vspace{-6mm}\\%   
     
-    Tredennick, A.T., and Hanan N.P. (2013) ``The Theoretical and Integrative Effects of Tree Harvest and Fire on Grassland-Savanna-Forest Transitions,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 1\textsuperscript{st} Place Oral Presentation}. \vspace{-6mm}\\%
+    Tredennick, A.T., and Hanan N.P. (2013) ``The Theoretical and Integrative Effects of Tree Harvest and Fire on Grassland-Savanna-Forest Transitions.'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 1\textsuperscript{st} Place Oral Presentation}. \vspace{-6mm}\\%
     
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Using Diverse Multi-Scale Data to Assess Patterns and Sustainability of Fuelwood Harvest in Sub-Saharan Africa,'' poster presentation, NSF FORECAST RCN Meeting, Woods Hole, MA. \vspace{-6mm}\\%
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Using Diverse Multi-Scale Data to Assess Patterns and Sustainability of Fuelwood Harvest in Sub-Saharan Africa.'' Poster presentation, NSF FORECAST RCN Meeting, Woods Hole, MA. \vspace{-6mm}\\%
     
-    Tredennick, A.T., Bentley, L.P., and Hanan, N.P. (2012) ``Whole-tree and branch-level scaling in savannas: testing Metabolic Scaling Theory in a non-ideal system,'' Ecological Society of America Annual Meeting, Portland, OR. \vspace{-6mm}\\%
+    Tredennick, A.T., Bentley, L.P., and Hanan, N.P. (2012) ``Whole-tree and branch-level scaling in savannas: testing Metabolic Scaling Theory in a non-ideal system.'' Ecological Society of America Annual Meeting, Portland, OR. \vspace{-6mm}\\%
     
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Patterns and sustainability of fuelwood supply and demand in Sub-Saharan Africa,'' 10th Annual Savanna Science Network Meeting, Kruger National Park, South Africa.\vspace{-6mm}\\%
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Patterns and sustainability of fuelwood supply and demand in Sub-Saharan Africa.'' 10th Annual Savanna Science Network Meeting, Kruger National Park, South Africa.\vspace{-6mm}\\%
     
-    Tredennick, A.T., Hanan, N.P., and Bentley, L.P. (2012) ``Scaling the savannas: Does Metabolic Scaling Theory apply in savannas?,'' Poster Presentation, 10th Annual Savanna Science Network Meeting, Kruger National Park, South Africa. \vspace{-6mm}\\%
+    Tredennick, A.T., Hanan, N.P., and Bentley, L.P. (2012) ``Scaling the savannas: Does Metabolic Scaling Theory apply in savannas?'' Poster Presentation, 10th Annual Savanna Science Network Meeting, Kruger National Park, South Africa. \vspace{-6mm}\\%
 
-    Tredennick, A.T., Hanan, N.P., Bucini, G., Parton, W., and Keogh, C. (2011) ``Spatially Quantifying Fuelwood Demand and Production in Sub-Saharan Africa,'' NREL Spring Seminar Series: New Voices in Ecology, Colorado State University.\vspace{-6mm}\\%
+    Tredennick, A.T., Hanan, N.P., Bucini, G., Parton, W., and Keogh, C. (2011) ``Spatially Quantifying Fuelwood Demand and Production in Sub-Saharan Africa.'' NREL Spring Seminar Series: New Voices in Ecology, Colorado State University.\vspace{-6mm}\\%
     
-    Tredennick, A.T. and Hanan N.P. (2011) ``Allometric Scaling in Savannas: Do the Non-conformists Conform to Ecological Theory?,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 2\textsuperscript{nd} Place Oral Presentation}.\vspace{-6mm}\\%
+    Tredennick, A.T. and Hanan N.P. (2011) ``Allometric Scaling in Savannas: Do the Non-conformists Conform to Ecological Theory?'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 2\textsuperscript{nd} Place Oral Presentation}.\vspace{-6mm}\\%
   
-  Tredennick, A.T. and Coughenour, M.B. (2009) ``Economic Incentives for Conservation in Meru, Kenya,'' Poster Presentation, Front Range Student Ecology Symposium, Colorado State University.
+  Tredennick, A.T. and Coughenour, M.B. (2009) ``Economic Incentives for Conservation in Meru, Kenya.'' Poster Presentation, Front Range Student Ecology Symposium, Colorado State University.
 
 %______________________________________________________________________________________________________________________
 \end{resume}
