updates ELE paper info

--- a/cv.tex
+++ b/cv.tex
@@ -76,7 +76,7 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
-      \textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. (In press). The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. \emph{Ecology Letters}. 
+      \textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. (2017). The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. \emph{Ecology Letters} 20(8):958-968. 
       
       \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2017). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution} 8(5):541-551.
 
